--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "gradio>=6.0.2",
     "ollama>=0.6.1",
     "openai>=2.9.0",
+    "python-dotenv>=1.2.1",
     "requests>=2.32.5",
 ]
